Added Employer profile
Added ability to create employer login account and profile

--- a/EmployeeLog/EmployeeLog/EmployeeLog.csproj
+++ b/EmployeeLog/EmployeeLog/EmployeeLog.csproj
@@ -111,11 +111,10 @@
     <None Include="packages.config" />
     <Content Include="Views\_LayoutPage1.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
-    <Content Include="Views\Login\Create.cshtml" />
-    <Content Include="Views\Login\Error.cshtml" />
     <Content Include="Views\Register\CreateAcc.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Profile\Profile.cshtml" />
+    <Content Include="Views\Profile\EmployerProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
